Time: 25 ms (98.89%), Space: 47.6 MB (79.27%) - LeetHub